kano-toolset (2.3.0-5) unstable; urgency=low

  * Added option for kano-signal to open new projects (launch-share)

 -- Team Kano <dev@kano.me>  Thu, 19 Jan 2016 15:11:00 +0100

kano-toolset (2.3.0-4) unstable; urgency=low

  * Add 'timeout' keyword arg to open_locked
  * Add MultilineEntry gtk3 widget

 -- Team Kano <dev@kano.me>  Wed, 6 Jan 2016 17:15:00 +0100

kano-toolset (2.3.0-3) unstable; urgency=low

  * Audio volume parsing fix.

 -- Team Kano <dev@kano.me>  Thu, 14 Jan 2016 11:11:00 +0100

kano-toolset (2.3.0-2) unstable; urgency=low

  * Separate utils module into submodule.

 -- Team Kano <dev@kano.me>  Wed, 6 Jan 2016 17:15:00 +0100

kano-toolset (2.3.0-1) unstable; urgency=low

  * Add decorators module.

 -- Team Kano <dev@kano.me>  Wed, 6 Jan 2016 16:17:00 +0100

kano-toolset (2.2.0-2) unstable; urgency=low

  * Adding get_partition_info API.

kano-toolset (2.2.0-1) unstable; urgency=low

  * Adding open_locked API.

kano-toolset (2.1-3) unstable; urgency=low

  * Adding adaptation for Debian Jessie

 -- Team Kano <dev@kano.me>  Thu, 1 Oct 2015 18:56:00 +0100

kano-toolset (2.1-2) unstable; urgency=low

  * Adding scheduling functionality for Kano Updater

 -- Team Kano <dev@kano.me>  Mon, 14 Sep 2015 14:10:00 +0100

kano-toolset (2.1-1) unstable; urgency=low

  * Adding the kano.timeout module

 -- Team Kano <dev@kano.me>  Wed, 1 Jul 2015 16:26:00 +0100

kano-toolset (2.0-2) unstable; urgency=low

  * Add 'unsudo' option to run_cmd, run_cmd_bg, run_cmd_log

 -- Team Kano <dev@kano.me>  Tue, 15 May 2015 18:59:00 +0100

kano-toolset (2.0-1) unstable; urgency=low

  * Adding the get_free_space() function to utils

 -- Team Kano <dev@kano.me>  Wed, 13 May 2015 17:10:00 +0100

kano-toolset (1.3-14) unstable; urgency=low

  * Extra X functions for minecraft.

 -- Team Kano <dev@kano.me>  Tue, 7 Apr 2015 13:51:00 +0100

kano-toolset (1.3-13) unstable; urgency=low

  * Added new script kano-tzupdate to use ipinfo.io and custom Kano auth credentials
